✨ impl post notes
